--- a/index.html
+++ b/index.html
@@ -1,73 +1,32 @@
-<!DOCTYPE html>
-<html lang="en">
-    <title>TimeTable</title>
-<head>
-    <style>
-        h1{font-family:'Times New Roman', Times, serif;font-size: 14px;}
-        tr:nth-child(even){
-            background-color: aqua;
-        }
-        h2{
-            align-items: center;
-        }
-        
-        </style>
-    <table border="7">
+<html>
 
-               
-<tr>
-    <th><h1>MONDAY</h1></th>
-    <th><h1>TUESDAY</h1></th>
-    <th><h1>WEDNESDAY</h1></th>
-    <th><h1>THURSDAY</h1></th>
-    <th><h1>FRIDAY</h1></th>
-    <th><h1>SATURDAY</h1></th>
-    <th><h1>SUNDAY</h1></th>
-<tr>
-    <td><h2>1</h2></td>
-    <td><h2>2</h2></td>
-    <td><h2>3</h2></td>
-    <td><h2>4</h2></td>
-    <td><h2>5</h2></td>
-    <td><h2>6</h2></td>
-    <td><h2>7</h2></td>
-</tr>
+<head><B>A test table with merged cells</B></head>
+<title>TABLE</title>
 
-<tr>
-    <td><h2>8</h2></td>
-    <td><h2>9</h2></td>
-    <td><h2>10</h2></td>
-    <td><h2>11</h2></td>
-    <td><h2>12</h2></td>
-    <td><h2>13</h2></td>
-    <td><h2>14</h2></td>   
-</tr>
-
-<tr>
-    <td><h2>15</h2></td>
-    <td><h2>16</h2></td>
-    <td><h2>17</h2></td>
-    <td><h2>18</h2></td>
-    <td><h2>19</h2></td>
-    <td><h2>20</h2></td>
-    <td><h2>21</h2></td>
-</tr>
-
-<tr>
-    <td><h2>22</h2></td>
-    <td><h2>23</h2></td>
-    <td><h2>24</h2></td>
-    <td><h2>25</h2></td>
-    <td><h2>26</h2></td>
-    <td><h2>27</h2></td>
-    <td><h2>28</h2></td>
-</tr>
-
-<tr>
-    <td><h2>29</h2></td>
-    <td><h2>30</h2></td>
-</tr>
-</table>
-</head>   
+<body>
+    <table border="1">
+        <tr>
+            <th rowspan="2" colspan="2"></th>
+            <th colspan="3">Average</th>
+            <th rowspan="2">redeyes</th>
+        </tr>
+        <tr>
+            <th> height </th>
+            <th colspan="2">weight</th>
+        </tr>
+        <tr>
+            <td colspan="2"> MALES</td>
+            <td colspan="1"> 1.9</td>
+            <td colspan="2">0.003</td>
+            <td colspan="2">40%</td>
+        </tr>
+        <tr>
+            <td colspan="2">FEMALES</td>
+            <td colspan="1">1.7</td>
+            <td colspan="2">0.002</td>
+            <td colspan="1">43%</td>
+        </tr>
 </body>
+</table>
+
 </html>
